Fix Sonar issues: Replace Stream.collect with Stream.toList(), merge if statements, extract nested ternary, and add ThreadLocal cleanup (#211)
Co-authored-by: Cursor Agent <cursoragent@cursor.com>